# wasm-kernel

./: Cargo.toml  wasm_kernel.wasm  wasm_kernel.wat
src/: lib.rs  main.rs
