[package]
name = "wasm-kernel"
version = "0.1.0"
authors = ["seanc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-std = { path = "../mywasmi/wasm-std" }
byteorder = { version = "1", default-features = false }
serde = "1"
serde_derive = "1"

[profile.release]
panic = "abort"
lto = true